# Robot-Digital-Image-Recognition

./: CMakeLists.txt  README.md  detector_node.py  display.launch  main.xacro  materials.xacro  package.xml  robot_image_recognition.urdf
config/: control.yaml
launch/: display.launch  gazebo.launch
urdf/: controller.urdf  main.xacro  robot_image_recognition.urdf
